--- a/app/css/Education-Promotion.css
+++ b/app/css/Education-Promotion.css
@@ -6,6 +6,7 @@ img{
 }
 .app{
 	margin: 0 auto;
+	font-family:'宋体';
 }
 .mui_card{
 	font-size: 0;
@@ -70,27 +71,34 @@ img{
 }
 .item>div.p-cheack{
 	display: inline-block;
-	width: 0.3rem;
+	width: 30px;
 	height: 30px;
 	border-radius: 3px;
 	border:1px solid #ccc;
 	padding: 0;
 	position: relative;
+	border:1px solid #ccc;
 }
-	
-.item>div.cur{
-	background: url(../img/06.png) no-repeat 50% 50%;
-	background-size: 100%;
-	border:1px solid transparent;
+
+.citem{
+	line-height:0.42rem;
+}
+.citem>span,.citem>a,.item>div.p-cheack{
+	display:inline-block;
+	vertical-align:middle;
 }
 .item input.check{
 	display: inline-block;
 	width: 100%;
 	height: 100%;
 	border-radius: 3px;
+	position:absolute;
+	left:0;
+	top:0;
+}
+.item input.cur{
 	background: url(../img/06.png) no-repeat 50% 50%;
-	border:1px solid #ccc;
-	position: relative;
+	background-size:100%;
 }
 
 .getResults{
@@ -102,4 +110,65 @@ img{
 	font-size: 0.3rem;
 	letter-spacing: 3px;
 	font-weight: 400;
+}
+
+/* 个人信息弹框 和手机验证 */
+.getResultModel{
+	padding: 0.64rem 0.2rem;
+	position: fixed;
+    left: 50%;
+    top: 50%;
+    width: 7.2rem;
+    padding-top: 0.64rem;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    background: #FFFFFF;
+    border-radius: 0.21333333rem;
+    font-family: PingFangSC-Regular;
+    font-weight: bold;
+	background-color: #FFFFFF;
+	font-size: 0.18rem;
+	z-index: 10;
+	color: #333333;
+}
+.getResultModel>h2{
+	padding-bottom: 20px;
+	font-size: 0.32rem;
+	text-align: center;
+}
+.msg_box>p{
+	padding: 2px 0.3rem;
+	font-size: 0.22rem;
+	line-height: 0.5rem;
+	color: #222;
+}
+.close{
+	display: block;
+	position: absolute;
+	right: 0.15rem;
+	top: 0.15rem;
+	width: 0.3rem;
+	height:0.3rem;
+	background-image: url(../img/close.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+/* 手机验证 */
+.phoneModel{
+	padding: 0.24rem 0.2rem;
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	width: 7.0rem;
+	padding-top: 0.64rem;
+	-webkit-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	background: #FFFFFF;
+	border-radius: 0.21333333rem;
+	font-family: PingFangSC-Regular;
+	background-color: #FFFFFF;
+	text-align: center;
+	font-size: 0.16px;
+	color: #999;
+	z-index: 10;
 }
