--- a/app/css/base.less
+++ b/app/css/base.less
@@ -126,5 +126,13 @@ button{
 	border: none;
 }
 
-
+// 字体水平居中
+.font-center(@height){
+	text-align: center;
+	height: @height;
+	line-height: @height;
+}
+.text-center{
+	text-align: center;
+}
 
