--- a/views/html/qualifications2.html
+++ b/views/html/qualifications2.html
@@ -14,7 +14,22 @@
     <link rel="stylesheet" type="text/css" href="ydui/css/ydui.css" />
     <script src="js/changHtmlFontSize.js"></script>
     <!-- <script>(function() {var _53code = document.createElement("script");_53code.src = "https://tb.53kf.com/code/code/10187673/1";var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(_53code, s);})();</script> -->
-    
+    <script>
+        window._agl = window._agl || [];
+        (function () {
+            _agl.push(
+                ['production', '_f7L2XwGXjyszb4d1e2oxPybgD']
+            );
+            (function () {
+                var agl = document.createElement('script');
+                agl.type ='text/javascript';
+                agl.async = true;
+                agl.src = 'https://fxgate.baidu.com/angelia/fcagl.js?production=_f7L2XwGXjyszb4d1e2oxPybgD';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(agl, s);
+            })();
+        })();
+        </script>
   </head>
   <body>
     <div class="app">
@@ -237,8 +252,9 @@
             success: function(res) {
                  
             	  $('.phoneModel').hide();
-                  $('.motal').hide();
-              dialog.alert('提交成功，感谢您的回答！');
+                $('.motal').hide();
+                 window._agl && window._agl.push(['track', ['success', {t: 3}]])
+                dialog.alert('提交成功，感谢您的回答！');
             },
             error: function() {
               console.log('提交失败')
