--- a/Bolin_admin/view/public-html/left-nav.html
+++ b/Bolin_admin/view/public-html/left-nav.html
@@ -1,66 +1,238 @@
 <script type="text/javascript" src="../../js/publlic.js"></script>
 
 <ul class="nav-box">
+  <li>
+    <div class="list-title">
+      <i class="layui-icon layui-icon-friends  q"></i>
+      <span>系统管理</span>
+      <i class="layui-icon layui-icon-right h"></i>
+    </div>
+    <div class="box">
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">公司信息</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">部门信息</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">职位授权</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">自定义授权</a>
+      </div>
+    </div>
+  </li>
+  <li>
+    <div class="list-title">
+      <i class="layui-icon layui-icon-friends  q"></i>
+      <span>导入管理</span>
+      <i class="layui-icon layui-icon-right h"></i>
+    </div>
+    <div class="box">
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">批量导入</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">单个录入</a>
+      </div>
+    </div>
+  </li>
+  <li>
+    <div class="list-title">
+      <i class="layui-icon layui-icon-friends  q"></i>
+      <span>分配管理</span>
+      <i class="layui-icon layui-icon-right h"></i>
+    </div>
+    <div class="box">
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">分配权重设置</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">指定人员设置</a>
+      </div>
+    </div>
+  </li>
+   <li>
+    <div class="list-title">
+      <i class="layui-icon layui-icon-friends  q"></i>
+      <span>推广管理</span>
+      <i class="layui-icon layui-icon-right h"></i>
+    </div>
+    <div class="box">
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">来源平台</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">推广分配</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">合同管理</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">数据管理</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">链接管理</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">账号管理</a>
+      </div>
+    </div>
+  </li>
+  <li>
+    <div class="list-title">
+      <i class="layui-icon layui-icon-friends  q"></i>
+      <span>客服管理</span>
+      <i class="layui-icon layui-icon-right h"></i>
+    </div>
+    <div class="box">
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">客户管理</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">校区映射</a>
+      </div>
+    </div>
+  </li>
   <li class="">
     <div class="list-title cur">
       <i class="layui-icon layui-icon-friends  q"></i>
-      <span>客服管理</span>
+      <span>客户管理</span>
       <i class="layui-icon layui-icon-right h"></i>
     </div>
-    <div class="box active">
-      <div class="list list-active">
+    <!--  active选项激活类 list-active子选项激活类  -->
+    <div class="box ">
+      <div class="list ">
         <i class="layui-icon layui-icon-group"></i>
         <a href="#">客户列表</a>
       </div>
       <div class="list">
         <i class="layui-icon layui-icon-group"></i>
-        <a href="#">客户列表</a>
+        <a href="#">私海客户</a>
       </div>
       <div class="list">
         <i class="layui-icon layui-icon-group"></i>
-        <a href="#">客户列表</a>
+        <a href="#">公海客户</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">预约客户</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">上门客户</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">定金客户</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">成交客户</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">无效客户</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">客户轨迹</a>
       </div>
     </div>
   </li>
   <li>
     <div class="list-title">
       <i class="layui-icon layui-icon-friends  q"></i>
-      <span>客服管理</span>
+      <span>报表管理</span>
       <i class="layui-icon layui-icon-right h"></i>
     </div>
     <div class="box">
       <div class="list">
         <i class="layui-icon layui-icon-group"></i>
-        <a href="#">客户列表</a>
+        <a href="#">营销报表</a>
       </div>
       <div class="list">
         <i class="layui-icon layui-icon-group"></i>
-        <a href="#">客户列表</a>
+        <a href="#">客服报表</a>
       </div>
       <div class="list">
         <i class="layui-icon layui-icon-group"></i>
-        <a href="#">客户列表</a>
+        <a href="#">校区销售报表</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">个人销售报表</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">外呼报表</a>
       </div>
     </div>
   </li>
   <li>
     <div class="list-title">
       <i class="layui-icon layui-icon-friends  q"></i>
-      <span>客服管理</span>
+      <span>排班管理</span>
       <i class="layui-icon layui-icon-right h"></i>
     </div>
     <div class="box">
       <div class="list">
         <i class="layui-icon layui-icon-group"></i>
-        <a href="#">客户列表</a>
+        <a href="#">班次管理</a>
       </div>
       <div class="list">
         <i class="layui-icon layui-icon-group"></i>
-        <a href="#">客户列表</a>
+        <a href="#">人员排班</a>
+      </div>
+    </div>
+  </li>
+  <li>
+    <div class="list-title">
+      <i class="layui-icon layui-icon-friends  q"></i>
+      <span>人员映射</span>
+      <i class="layui-icon layui-icon-right h"></i>
+    </div>
+    <div class="box">
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">TQ管理</a>
       </div>
       <div class="list">
         <i class="layui-icon layui-icon-group"></i>
-        <a href="#">客户列表</a>
+        <a href="#">手机管理</a>
+      </div>
+    </div>
+  </li>
+  <li>
+    <div class="list-title">
+      <i class="layui-icon layui-icon-friends  q"></i>
+      <span>统计分析</span>
+      <i class="layui-icon layui-icon-right h"></i>
+    </div>
+    <div class="box">
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">统计XX</a>
+      </div>
+      <div class="list">
+        <i class="layui-icon layui-icon-group"></i>
+        <a href="#">统计XX</a>
       </div>
     </div>
   </li>
