--- a/views/html/qualifications12.html
+++ b/views/html/qualifications12.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>学历测试推广11</title>
+    <title>学历测试推广</title>
     <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" name="viewport">
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
@@ -238,8 +238,6 @@
     	
       // 客服固定在底部
       $(function() {
-       alert(document.referrer+"sss "); 
-    	 
        
         // automatic 勾选自动输入历史手机号码
         $('.automatic').on('click', function() {
