--- a/Bolin_admin/view/customer/customer-list.html
+++ b/Bolin_admin/view/customer/customer-list.html
@@ -21,7 +21,7 @@
     <div class="app" id="app">
       <div class="nav-left">
         <div class="logon">
-          <img src="img/logo.png" alt="">
+          <img src="../../img/logo.png" alt="">
         </div>
         <div class="left-box">
           <!-- 左侧导航 --> 
